addon-sdk/source/test/fixtures/loader/syntax-error/main.js




'use strict';

var a = require('./error');

exports.a = a;
exports.main = exports;
